style/style.css
:root {
    /* primary */
    --Red: hsl(0, 78%, 62%);
    --Cyan: hsl(180, 62%, 55%);
    --Orange: hsl(34, 97%, 64%);
    --Blue: hsl(212, 86%, 64%);
    /* secondary */
    --Very-Dark-Blue: hsl(234, 12%, 34%);
    --Grayish-Blue: hsl(229, 6%, 66%);
    --Very-Light-Gray: hsl(0, 0%, 98%);
    --fw-200: 200;
    --fw-400: 400;
    --fw-600: 600;
}
/* 1. Use a more-intuitive box-sizing model */
*,
*::before,
*::after {
    box-sizing: border-box;
}

/* 2. Remove default margin */
* {
    margin: 0;
}

body {
    /* 3. Add accessible line-height */
    line-height: 1.5;
    /* 4. Improve text rendering */
    -webkit-font-smoothing: antialiased;
}

/* 5. Improve media defaults */
img,
picture,
video,
canvas,
svg {
    display: block;
    max-width: 100%;
}

/* 6. Inherit fonts for form controls */
input,
button,
textarea,
select {
    font: inherit;
}

/* 7. Avoid text overflows */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
    overflow-wrap: break-word;
}

/* 8. Improve line wrapping */
p {
    text-wrap: pretty;
}
h1,
h2,
h3,
h4,
h5,
h6 {
    text-wrap: balance;
}

/*
  9. Create a root stacking context
*/
body {
    font-size: 15px;
    font-family: "Poppins", sans-serif;
    background-color: var(--Very-Light-Gray);
    color: var(--Very-Dark-Blue);
}
section {
    padding: 1rem;
}
.cards {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
}
.card {
    background-color: #fff;
    box-shadow: 10px 0px 20px rgb(0, 0, 0, 0.1);
    border-radius: 5px;
    padding: 1rem;
    width: 320px;
    display: flex;
    flex-direction: column;
    gap: 1.725rem;
}
.section-card {
    display: flex;
    align-items: center;
    justify-content: center;
}
.card1 {
    border-top: 8px solid var(--Blue);
}
.card2 {
    border-top: 8px solid var(--Red);
}
.card3 {
    border-top: 8px solid var(--Cyan);
}
.card4 {
    border-top: 8px solid var(--Blue);
}
.img {
    display: flex;
    justify-content: flex-end;
}
.content {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}
.content p {
    color: var(--Grayish-Blue);
}
.md {
    display: flex;
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
}

.section-discription {
    /* text-align: center; */
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}
.t1 {
    font-size: 1.8rem;
    font-weight: 100;
    color: var(--Grayish-Blue);
}
.t2 {
    font-size: 1.8rem;
    font-weight: 600;
}
.section-discription p {
    color: var(--Grayish-Blue);
    margin-top: 1rem;
    width: 470px;
    text-align: center;
}
@media (min-width: 600px) {
    .cards {
        flex-direction: row;
        align-items: center;
        justify-content: space-between;
        gap: 1.5rem;
    }
    .t1,
    .t2 {
        font-size: 2rem;
    }
}

